Article简单重构，完善测试，消除IDE警告